style: update styles

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,7 @@
-$primary_white: #fff;
+$primary_white: #ffffff;
 $primary_black: #111111;
 $primary_blue: #0071cb;
 $primary_gray: #747474;
-
-$second_white: #e7e7e7;
-$second_gray: #f0f0f0;
-$second_black: #2e2e2e;
 
 $third_gray: rgba(116, 116, 116, 0.2);
 $third_black: rgba(30, 30, 30, 0.01);
@@ -19,4 +15,4 @@ $sixth_black: rgba(39, 39, 39, 0.1);
 $seventh_gray: #4d4d4d;
 $seventh_black: #333333;
 
-$eighth_gray: #6D7082;
+$eighth_gray: #6d7082;
