--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -25,3 +25,18 @@ input {
     background: none;
     appearance: none;
 }
+body {
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    background: #111111;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    color: #ffffff;
+}
